7597 - Fixed mandatory card contrast issue

--- a/arches/app/media/css/accessibility.css
+++ b/arches/app/media/css/accessibility.css
@@ -72,3 +72,7 @@
     color: #7AD02F;
     text-decoration: underline;
 }
+
+.jstree-default .func-node {
+    color: #000000;
+}
